[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scene & Script/Gameplay/BattleEnd/BattleEnd.gd" type="Script" id=1]
[ext_resource path="res://Asset/Font/jumper_3/JumperPERSONALUSEONLY-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/Sound and Music/Sound/220203__gameaudio__casual-death-loose.wav" type="AudioStream" id=3]
[ext_resource path="res://Asset/Sound and Music/Sound/220206__gameaudio__beep-space-button.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="BattleEnd" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelMenu" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
margin_right = 640.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
margin_left = 220.0
margin_top = 146.0
margin_right = 420.0
margin_bottom = 238.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 200.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 59.0
margin_right = 140.0
margin_bottom = 38.0

[node name="SelectOption1" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 81.0
margin_bottom = 17.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/SelectOption1"]
margin_right = 81.0
margin_bottom = 17.0

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/SelectOption1/HBoxContainer"]
margin_right = 7.0
margin_bottom = 17.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/SelectOption1/HBoxContainer"]
margin_left = 11.0
margin_right = 81.0
margin_bottom = 17.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Retry"

[node name="SelectOption2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 21.0
margin_right = 81.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/SelectOption2"]
margin_right = 81.0
margin_bottom = 17.0

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/SelectOption2/HBoxContainer"]
margin_right = 7.0
margin_bottom = 17.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/SelectOption2/HBoxContainer"]
margin_left = 11.0
margin_right = 81.0
margin_bottom = 17.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exit"

[node name="SelectOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelectedOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
